--- a/html/contact.html
+++ b/html/contact.html
@@ -3,7 +3,7 @@
         <h2 class="section-title">Get in Touch</h2>
         <p class="section-subtitle">I'd love to hear from you. Please send a message using the form below.</p>
         <div class="contact-form-container">
-            <form id="contactForm" action="https://formspree.io/georgemattersdorfer@gmail.com" method="POST" novalidate>
+            <form action="https://formspree.io/f/xwkgplgo" method="POST">
                 <div class="form-row">
                     <div class="input-group">
                         <label for="name">Name</label>
