--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/home.css">
     <link rel="stylesheet" href="css/about.css">
-    <link rel="stylesheet" href="css/slider.css">
+    <!--<link rel="stylesheet" href="css/slider.css">-->
     <link rel="stylesheet" href="css/socialmedia.css">
     <link rel="stylesheet" href="css/services.css">
     <link rel="stylesheet" href="css/projects.css">
@@ -22,7 +22,7 @@
 <div id="header"></div>
 <div id="home"></div>
 <div id="about"></div>
-<div id="slider"></div>
+<!--<div id="slider"></div>-->
 <div id="social"></div>
 <div id="services"></div>
 <div id="projects"></div>
