--- a/src/html/projects.html
+++ b/src/html/projects.html
@@ -8,11 +8,11 @@
         <img src="img/GMatters.png" alt="George Matters Project Cover" class="project-cover">
         <div class="project-info">
           <h3 class="project-name">George Matters</h3>
-          <p class="project-year">Year of Release</p>
-          <p class="project-description">Short description of the George Matters.</p>
+          <p class="project-year">since 2013</p>
+          <p class="project-description">George Matters Solo</p>
           <div class="music-links">
-            <a href="link-to-spotify" class="music-link spotify">Spotify</a>
-            <a href="link-to-youtube" class="music-link youtube">YouTube</a>
+            <a href="https://open.spotify.com/intl-de/artist/2AnO6EgvLg4Hg5xFVqpobG" class="music-link spotify">Spotify</a>
+            <a href="https://www.youtube.com/@georgematters" class="music-link youtube">YouTube</a>
           </div>
         </div>
       </div>
@@ -20,33 +20,33 @@
       <div class="project">
         <img src="img/SteveD_GMatter.png" alt="GMatters/SteveD Project Cover" class="project-cover">
         <div class="project-info">
-          <h3 class="project-name">GMatters/SteveD</h3>
-          <p class="project-year">Year of Release</p>
-          <p class="project-description">Short description of the GMatters/SteveD.</p>
+          <h3 class="project-name">GeorgeMatters/SteveD</h3>
+          <p class="project-year">since 2014</p>
+          <p class="project-description">Akkustische Gitarre, Stimmen und Kontrabass</p>
           <div class="music-links">
-            <a href="link-to-spotify" class="music-link spotify">Spotify</a>
-            <a href="link-to-youtube" class="music-link youtube">YouTube</a>
+            <a href="https://innenhofkultur.bandcamp.com/track/evas-traveling-song" class="music-link apple">Spotify</a>
           </div>
         </div>
       </div>
 
       <div class="project">
-        <img src="img/SteveD_GMatter.png" alt="AND_I Project Cover" class="project-cover">
+        <img src="img/and_i.JPG" alt="AND_I Project Cover" class="project-cover">
         <div class="project-info">
           <h3 class="project-name">AND_I</h3>
-          <p class="project-year">Year of Release</p>
+          <p class="project-year">since 2020</p>
           <p class="project-description">Short description of the AND_I.</p>
           <div class="music-links">
-            <a href="link-to-spotify" class="music-link spotify">Spotify</a>
-            <a href="link-to-youtube" class="music-link youtube">YouTube</a>
+            <a href="www.and-i-music.com" class="music-link spotify">Spotify</a>
+            <a href="https://www.youtube.com/channel/UCfOYJYdVote88iPwvg70hig" class="music-link youtube">YouTube</a>
           </div>
         </div>
       </div>
 
       <div class="project">
-        <img src="img/SteveD_GMatter.png" alt="George&Angi Project Cover" class="project-cover">
+        
+        <img src="img/PROMO BAND PICS-2/img/PROMO BAND PICS-2/img/PROMO BAND PICS-2/26_websize.jpg" alt="George & Angi Project Cover" class="project-cover">
         <div class="project-info">
-          <h3 class="project-name">George&Angi</h3>
+          <h3 class="project-name">George & Angi</h3>
           <p class="project-year">Year of Release</p>
           <p class="project-description">Short description of the George&Angi.</p>
           <div class="music-links">
@@ -57,20 +57,20 @@
       </div>
 
       <div class="project">
-        <img src="img/SteveD_GMatter.png" alt="Gran Tourismo Project Cover" class="project-cover">
+        <img src="img/PROMO BAND PICS-2/GTLOGO.jpg" alt="Gran Tourismo Project Cover" class="project-cover">
         <div class="project-info">
           <h3 class="project-name">Gran Tourismo</h3>
           <p class="project-year">Year of Release</p>
           <p class="project-description">Short description of the Gran Tourismo.</p>
           <div class="music-links">
-            <a href="link-to-spotify" class="music-link spotify">Spotify</a>
-            <a href="link-to-youtube" class="music-link youtube">YouTube</a>
+            <a href="link-to-spotify" class="music-link facebook">Spotify</a>
+            <a href="https://www.youtube.com/" class="music-link youtube">YouTube</a>
           </div>
         </div>
       </div>
   
       <div class="project">
-        <img src="img/And_I.png" alt="AND_I Project Cover" class="project-cover">
+        
         <div class="project-info">
           <h3 class="project-name">Danny and the bad rats</h3>
           <p class="project-year">Year of Release</p>
