--- a/html/projects.html
+++ b/html/projects.html
@@ -1,9 +1,9 @@
 <section id="projects" class="projects-section">
-    <h2 class="projects-title">Projects Showcase</h2>
-    <p class="projects-description">Discover top projects spanning various genres and experiences. Dive into the soundscapes crafted by different projects of mine.</p>
+    <h3 class="projects-title">Projects Showcase</h3>
+    <!--<p class="projects-description">Discover top projects spanning various genres and experiences. Dive into the soundscapes crafted by different projects of mine.</p>-->
     <div class="project-container">
       <div class="project">
-        <img src="img/GMatters.png" alt="George Matters Project Cover" class="project-cover">
+        <img src="img/PROMO BAND PICS-2/236581304_239070291551945_7735105067690698295_n.jpg" alt="George Matters Project Cover" class="project-cover">
         <div class="project-info">
           <h3 class="project-name">George Matters</h3>
           <p class="project-year">since 2013</p>
@@ -65,7 +65,7 @@
         <img src="img/dannyandthebadrats.png" alt="Gran Tourismo Project Cover" class="project-cover">
         <div class="project-info">
           <h3 class="project-name">Danny and the bad rats</h3>
-          <p class="project-year">Year of Release</p>
+          <p class="project-year">Timelesss</p>
           <p class="project-description">Short description of the Danny and the bad rats.</p>
           <div class="music-links">
             <a href="link-to-spotify" class="music-link spotify">Spotify</a>
