--- a/src/html/projects.html
+++ b/src/html/projects.html
@@ -1,11 +1,9 @@
 <section id="projects" class="projects-section">
-    <h2 class="projects-title">Projects Showcase</h2>
-    <p class="projects-description">Discover top projects spanning various genres and experiences. Dive into the soundscapes crafted by different projects of mine.</p>
-  
+    <h3 class="projects-title">Projects Showcase</h3>
+    <!--<p class="projects-description">Discover top projects spanning various genres and experiences. Dive into the soundscapes crafted by different projects of mine.</p>-->
     <div class="project-container">
-  
       <div class="project">
-        <img src="img/GMatters.png" alt="George Matters Project Cover" class="project-cover">
+        <img src="img/PROMO BAND PICS-2/236581304_239070291551945_7735105067690698295_n.jpg" alt="George Matters Project Cover" class="project-cover">
         <div class="project-info">
           <h3 class="project-name">George Matters</h3>
           <p class="project-year">since 2013</p>
@@ -16,7 +14,6 @@
           </div>
         </div>
       </div>
-  
       <div class="project">
         <img src="img/SteveD_GMatter.png" alt="GMatters/SteveD Project Cover" class="project-cover">
         <div class="project-info">
@@ -28,7 +25,6 @@
           </div>
         </div>
       </div>
-
       <div class="project">
         <img src="img/and_i.JPG" alt="AND_I Project Cover" class="project-cover">
         <div class="project-info">
@@ -41,26 +37,23 @@
           </div>
         </div>
       </div>
-
       <div class="project">
-        
-        <img src="img/PROMO BAND PICS-2/img/PROMO BAND PICS-2/img/PROMO BAND PICS-2/26_websize.jpg" alt="George & Angi Project Cover" class="project-cover">
+        <img src="img/PROMO BAND PICS-2/26_websize.jpg" alt="George & Angi Project Cover" class="project-cover">
         <div class="project-info">
           <h3 class="project-name">George & Angi</h3>
-          <p class="project-year">Year of Release</p>
-          <p class="project-description">Short description of the George&Angi.</p>
+          <p class="project-year">New</p>
+          <p class="project-description">Harmonisches Duo für verschiedenste Anlässe</p>
           <div class="music-links">
             <a href="link-to-spotify" class="music-link spotify">Spotify</a>
             <a href="link-to-youtube" class="music-link youtube">YouTube</a>
           </div>
         </div>
       </div>
-
       <div class="project">
         <img src="img/PROMO BAND PICS-2/GTLOGO.jpg" alt="Gran Tourismo Project Cover" class="project-cover">
         <div class="project-info">
           <h3 class="project-name">Gran Tourismo</h3>
-          <p class="project-year">Year of Release</p>
+          <p class="project-year">Classics</p>
           <p class="project-description">Short description of the Gran Tourismo.</p>
           <div class="music-links">
             <a href="link-to-spotify" class="music-link facebook">Spotify</a>
@@ -68,12 +61,11 @@
           </div>
         </div>
       </div>
-  
       <div class="project">
-        
+        <img src="img/dannyandthebadrats.png" alt="Gran Tourismo Project Cover" class="project-cover">
         <div class="project-info">
           <h3 class="project-name">Danny and the bad rats</h3>
-          <p class="project-year">Year of Release</p>
+          <p class="project-year">Timelesss</p>
           <p class="project-description">Short description of the Danny and the bad rats.</p>
           <div class="music-links">
             <a href="link-to-spotify" class="music-link spotify">Spotify</a>
@@ -81,10 +73,6 @@
           </div>
         </div>
       </div>
-
-  
     </div>
-
   </section>
-
   <section>
