--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -1,4 +1,4 @@
-<footer class="site-footer">
+<footer class="site-footer">      
     <div class="footer-contact">
         <h4>Get In Touch</h4>
         <p>9020 Klagenfurt</p>
@@ -43,6 +43,10 @@
             <li><a href="#projects" class="nav-link">Projects</a></li>
             <li><a href="#contact" class="nav-link">Contact</a></li>
         </ul>
+
+    </div>
+    <div class="footer-bottom">
+        <p>&copy; Logarithmix SoftwareSolutions 2024. All rights reserved.</p>
     </div>
 
 </footer>
