--- a/src/html/slider.html
+++ b/src/html/slider.html
@@ -1,13 +1,15 @@
 <section id="slider" class="slider-section">
+    <h3>Gallery</h3>
     <div id="image-slider" class="image-slider">
+
         <div class="slide active">
-            <img src="img/PROMO BAND PICS-2/©Jasmin Lopez Photography-36.jpg" alt="Slide 1">
+            <img src="img/PROMO BAND PICS-2/5.jpg" alt="Slide 1">
         </div>
         <div class="slide">
             <img src="img/PROMO BAND PICS-2/©Jasmin Lopez Photography-36_websize.jpg" alt="Slide 2">
         </div>
         <div class="slide">
-            <img src="img/PROMO BAND PICS-2/©Jasmin Lopez Photography-26_websize.jpg" alt="Slide 3">
+            <img src="img/PROMO BAND PICS-2/_MG_6001.JPG" alt="Slide 3">
         </div>
         <div class="slide">
             <img src="img/PROMO BAND PICS-2/©Jasmin Lopez Photography-51_websize.jpg" alt="Slide 4">
@@ -16,16 +18,16 @@
             <img src="img/PROMO BAND PICS-2/©Jasmin Lopez Photography-54_websize.jpg" alt="Slide 5">
         </div>
         <div class="slide">
-            <img src="img/PROMO BAND PICS-2/©Jasmin Lopez Photography-87_websize.jpg" alt="Slide 6">
+            <img src="img/PROMO BAND PICS-2/gtatph2.jpeg" alt="Slide 6">
         </div>
         <div class="slide">
-            <img src="img/PROMO BAND PICS-2/©Jasmin Lopez Photography-87_websize.jpg" alt="Slide 7">
+            <img src="img/PROMO BAND PICS-2/GTfull2.jpg" alt="Slide 7">
         </div>
         <div class="slide">
             <img src="img/PROMO BAND PICS-2/©Jasmin Lopez Photography-87_websize.jpg" alt="Slide 8">
         </div>
         <div class="slide">
-            <img src="img/PROMO BAND PICS-2/©Jasmin Lopez Photography-87_websize.jpg" alt="Slide 9">
+            <img src="img/PROMO BAND PICS-2/IRL18-310.jpg" alt="Slide 9">
         </div>
         <!-- navigation buttons -->
         <a class="prev">&#10094;</a>
