--- a/src/html/socialmedia.html
+++ b/src/html/socialmedia.html
@@ -1,6 +1,6 @@
 <section class="social-media-section">
     <div class="container">
-      <h3>Follow on Social Media</h3>
+      <!--<h3>Follow on Social Media</h3>-->
       <div class="social-icons">
         <!-- Instagram -->
         <a href="https://www.instagram.com/mattersgeorge/" target="_blank" aria-label="Instagram">
