--- a/html/projects.html
+++ b/html/projects.html
@@ -26,7 +26,7 @@
         </div>
       </div>
       <div class="project">
-        <img src="img/and_i.JPG" alt="AND_I Project Cover" class="project-cover">
+        <img src="img/and_I.JPG" alt="AND_I Project Cover" class="project-cover">
         <div class="project-info">
           <h3 class="project-name">AND_I</h3>
           <p class="project-year">since 2020</p>
