--- a/src/html/slider.html
+++ b/src/html/slider.html
@@ -9,7 +9,7 @@
             <img src="img/PROMO BAND PICS-2/©Jasmin Lopez Photography-36_websize.jpg" alt="Slide 2">
         </div>
         <div class="slide">
-            <img src="img/_MG_6001.JPG" alt="Slide 3">
+            <img src="img/PROMO BAND PICS-2/GMGreen.jpg" alt="Slide 3">
         </div>
         <div class="slide">
             <img src="img/PROMO BAND PICS-2/©Jasmin Lopez Photography-51_websize.jpg" alt="Slide 4">
@@ -21,7 +21,7 @@
             <img src="img/PROMO BAND PICS-2/gtatph2.jpeg" alt="Slide 6">
         </div>
         <div class="slide">
-            <img src="img/GTfull2.jpg" alt="Slide 7">
+            <img src="img/PROMO BAND PICS-2/GMSD.jpg" alt="Slide 7">
         </div>
         <div class="slide">
             <img src="img/PROMO BAND PICS-2/©Jasmin Lopez Photography-54_websize.jpg" alt="Slide 8">
