--- a/html/contact.html
+++ b/html/contact.html
@@ -1,29 +1,29 @@
-<section id="contact" class="contact-section">
+<section class="contact-section">
     <div class="container">
-        <h3 class="section-title">Get in Touch</h3>
-        <p class="section-subtitle">I'd love to hear from you. Please send a message using the form below.</p>
+        <h3 class="section-title">Kontakt</h3>
+        <p class="section-subtitle">Ich würde mich freuen, von Ihnen zu hören. Bitte senden Sie mir eine Nachricht.</p>
         <div class="contact-form-container">
             <form action="https://formspree.io/f/xwkgplgo" method="POST">
                 <div class="form-row">
                     <div class="input-group">
                         <label for="name">Name</label>
-                        <input type="text" id="name" name="name" placeholder="Your full name" required>
-                        <span class="error-message">Name is required.</span>
+                        <input type="text" id="name" name="name" placeholder="Ihr vollständiger Name" required>
+                        <span class="error-message">Name ist erforderlich.</span>
                     </div>
                     <div class="input-group">
-                        <label for="email">Email</label>
-                        <input type="email" id="email" name="_replyto" placeholder="Your email address" required>
-                        <span class="error-message">Valid email is required.</span>
+                        <label for="email">E-Mail</label>
+                        <input type="email" id="email" name="_replyto" placeholder="Ihre E-Mail-Adresse" required>
+                        <span class="error-message">Eine gültige E-Mail-Adresse ist erforderlich.</span>
                     </div>
                 </div>
                 <div class="form-row">
                     <div class="input-group">
-                        <label for="message">Message</label>
-                        <textarea id="message" name="message" placeholder="Your message here" required></textarea>
-                        <span class="error-message">Please enter a message.</span>
+                        <label for="message">Nachricht</label>
+                        <textarea id="message" name="message" placeholder="Ihre Nachricht hier" required></textarea>
+                        <span class="error-message">Bitte geben Sie eine Nachricht ein.</span>
                     </div>
                 </div>
-                <button type="submit" class="button">Send Message</button>
+                <button type="submit" class="button">Nachricht senden</button>
             </form>
         </div>
     </div>
