--- a/html/footer.html
+++ b/html/footer.html
@@ -1,15 +1,15 @@
 <footer class="site-footer">      
     <div class="footer-contact">
-        <h4>Get In Touch</h4>
+        <h4>Kontakt</h4>
         <p>9020 Klagenfurt</p>
-        <p>(+62) 81 2345 6789</p>
-        <p>georgematters@gmail.com</p>
-        <p>07.00 AM - 19.00 PM</p>
+        <p>(+43) 664 3835572</p>
+        <p>georg.mattersdorfer@gmail.com</p>
+        <p>Mo-So 09:00 - 19:00</p>
     </div>
     
     <div class="footer-about">
         <h3>George Matters</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar.</p>
+        <p>Finden Sie uns auf Social Media</p>
         <div class="footer-social-icons">
                 <!-- Instagram -->
                 <a href="https://www.instagram.com/mattersgeorge/" target="_blank" aria-label="Instagram">
