--- a/html/home.html
+++ b/html/home.html
@@ -6,8 +6,8 @@
         <img class="home-slide" src="img/titlepage.webp" alt="Image 3">
     </div>
     <div class="overlay-text">
-        <h2 class="animated fadeInUp" style="animation-delay: 200ms;">Elevate Your Event with George Matters - Music for Every Occasion</h2>
-        <p class="animated fadeInUp" style="animation-delay: 400ms;">Immerse your special moments in perfect harmony with George Matters, your premier choice for elevating events through the power of music. Whether it's a wedding, corporate gathering, or any celebration, BR Marcus brings a unique blend of talent and versatility to create an unforgettable atmosphere.</p>
+        <h2 class="animated fadeInUp" style="animation-delay: 200ms;">Bereichern Sie Ihr Event mit George Matters - Musik für jeden Anlass</h2>
+        <p class="animated fadeInUp" style="animation-delay: 400ms;">Tauchen Sie Ihre besonderen Momente in perfekte Harmonie mit George Matters, Ihrer ersten Wahl, um Veranstaltungen durch die Kraft der Musik zu bereichern. Ob Hochzeit, Firmenveranstaltung oder jede Art von Feier, GeorgeMatters bringt eine einzigartige Mischung aus Talent und Vielseitigkeit, um eine unvergessliche Atmosphäre zu schaffen.</p>
         <div class="button-container">
             <a href="#about" class="button animated fadeInUp" style="animation-delay: 600ms;">About Me</a>
             <a href="#contact" class="button animated fadeInUp" style="animation-delay: 800ms;">Get in Touch</a>
