--- a/html/projects.html
+++ b/html/projects.html
@@ -1,4 +1,4 @@
-<section id="projects" class="projects-section">
+<section class="projects-section">
     <h3 class="projects-title">Projects Showcase</h3>
     <!--<p class="projects-description">Discover top projects spanning various genres and experiences. Dive into the soundscapes crafted by different projects of mine.</p>-->
     <div class="project-container">
@@ -30,10 +30,21 @@
         <div class="project-info">
           <h3 class="project-name">AND_I</h3>
           <p class="project-year">since 2020</p>
-          <p class="project-description">Short description of the AND_I.</p>
+          <p class="project-description">Österreichisches Elektro-Pop Duo.</p>
           <div class="music-links">
             <a href="www.and-i-music.com" class="music-link spotify">Spotify</a>
             <a href="https://www.youtube.com/channel/UCfOYJYdVote88iPwvg70hig" class="music-link youtube">YouTube</a>
+          </div>
+        </div>
+      </div>
+      <div class="project">
+        <img src="img/PROMO BAND PICS-2/GTLOGO.jpg" alt="Gran Tourismo Project Cover" class="project-cover">
+        <div class="project-info">
+          <h3 class="project-name">Gran Tourismo</h3>
+          <p class="project-year">Classics</p>
+          <p class="project-description">Kärntner Parade-Genuss-Rocker</p>
+          <div class="music-links">
+            <a href="http://www.grantourismo.at/" class="music-link facebook">Homepage</a>
           </div>
         </div>
       </div>
@@ -50,23 +61,11 @@
         </div>
       </div>
       <div class="project">
-        <img src="img/PROMO BAND PICS-2/GTLOGO.jpg" alt="Gran Tourismo Project Cover" class="project-cover">
-        <div class="project-info">
-          <h3 class="project-name">Gran Tourismo</h3>
-          <p class="project-year">Classics</p>
-          <p class="project-description">Short description of the Gran Tourismo.</p>
-          <div class="music-links">
-            <a href="link-to-spotify" class="music-link facebook">Spotify</a>
-            <a href="https://www.youtube.com/" class="music-link youtube">YouTube</a>
-          </div>
-        </div>
-      </div>
-      <div class="project">
         <img src="img/dannyandthebadrats.png" alt="Gran Tourismo Project Cover" class="project-cover">
         <div class="project-info">
           <h3 class="project-name">Danny and the bad rats</h3>
           <p class="project-year">Timelesss</p>
-          <p class="project-description">Short description of the Danny and the bad rats.</p>
+          <p class="project-description">Rock n Roll by Danny and the bad rats.</p>
           <div class="music-links">
             <a href="link-to-spotify" class="music-link spotify">Spotify</a>
             <a href="link-to-youtube" class="music-link youtube">YouTube</a>
