--- a/html/services.html
+++ b/html/services.html
@@ -1,44 +1,44 @@
 <section class="services-section">
   <div class="service-container">
-      <h3 class="service-title">Book Services</h3>
-      <p class="service-intro">Welcome to the Services, where George Matters transforms ordinary events into extraordinary moments through the power of music. Discover a range of bespoke services tailored to elevate your occasions to a symphony of unforgettable experiences.</p>
-      <a href="#contact" class="service-link">Book now →</a>
+      <h3 class="service-title">Dienstleistungen buchen</h3>
+      <p class="service-intro">Willkommen, George Matters verwandelt gewöhnliche Veranstaltungen durch die Kraft der Musik in außergewöhnliche Momente. Eine Reihe von Angeboten, sowie individual Lösungen gestalten ihre Anlässe als Symphonie unvergesslicher Erlebnisse zu erheben.</p>
+      <a href="#contact" class="service-link">Jetzt buchen →</a>
   </div>
   <div class="service-boxes">
       <div class="service-box">
         <div class="icon-container">      
           <i class="fas fa-ring service-icon"></i>
-          <h3 class="box-title">Wedding Serenades</h3>
+          <h3 class="box-title">Hochzeiten</h3>
         </div>
-          <p class="box-content">Immerse your wedding day in the enchanting melodies of George Matters. From the ceremony to the reception, let the music narrate your love story.</p>
+          <p class="box-content">Tauchen Sie Ihren Hochzeitstag in die verzaubernden Melodien von George Matters. Von der Zeremonie bis zum Empfang, lassen Sie die Musik Ihre Liebesgeschichte erzählen.</p>
       </div>
       <div class="service-box">
         <div class="icon-container">
           <i class="fas fa-dove service-icon"></i> 
-          <h3 class="box-title">Funeral Elegies</h3>
+          <h3 class="box-title">Trauer Tage</h3>
         </div>
-          <p class="box-content">Provide solace and dignity to farewell ceremonies with George Matters heartfelt and poignant musical accompaniment, honoring the memory of your loved ones.</p>
+          <p class="box-content">Bieten Sie Trost und Würde bei Abschiedszeremonien mit ergreifender musikalischer Begleitung, um das Andenken an Ihre Liebsten zu ehren.</p>
       </div>
       <div class="service-box">
         <div class="icon-container">
           <i class="fas fa-moon service-icon"></i> 
-          <h3 class="box-title">Evening Events</h3>
+          <h3 class="box-title">Veranstaltungen</h3>
         </div>
-          <p class="box-content">Elevate your evening events with George Matters dynamic performances. Whether it's a corporate gathering, private party, or social event, set the perfect mood with captivating music.</p>
+          <p class="box-content">Ob es sich um ein Firmentreffen, eine private Party oder eine gesellschaftliche Veranstaltung handelt, setzen Sie die perfekte Stimmung. Kontaktieren Sie uns für nähere Infos</p>
       </div>
       <div class="service-box">
         <div class="icon-container">
           <i class="fas fa-microphone service-icon"></i> 
-          <h3 class="box-title">Solo Artistry</h3>
+          <h3 class="box-title">Solokunst</h3>
         </div>
-          <p class="box-content">Experience the brilliance of George Matters in solo performances. His individual artistry brings a unique touch to every note, creating an intimate and personal connection with the audience.</p>
+          <p class="box-content">Erleben Sie die George Matters im Solo-Auftritt. Individuelle Kunst bringt eine einzigartige Note und schafft eine intime und persönliche Verbindung zum Publikum.</p>
       </div>
       <div class="service-box">
         <div class="icon-container">
           <i class="fas fa-cogs service-icon"></i> 
-          <h3 class="box-title">Custom Packages</h3>
+          <h3 class="box-title">Individuelle Pakete</h3>
         </div>
-          <p class="box-content">Tailor the musical experience to fit your specific event. Choose from a range of customizable packages designed to align with your preferences and create a unique atmosphere.</p>
+          <p class="box-content">Passen Sie das Musikerlebnis an Ihre spezifische Veranstaltung an. Kontaktieren Sie uns und sichern sich Ihre Unterhaltung.</p>
       </div>
   </div>
 </section>
