--- a/html/about.html
+++ b/html/about.html
@@ -2,28 +2,30 @@
     <div class="about-container">
         <div class="about-content">
             <h2 data-animate="fade-in" data-delay="600">Meet George Matters</h2>
+            <div class="about-image-container">
+              <!--<img src="img/titlepage_xy.png" alt="Guitarist" class="about-image about-image-guitarist">-->
+              <img src="img/PROMO BAND PICS-2/236581304_239070291551945_7735105067690698295_n.jpg" alt="Profile" class="about-image about-image-profile">
+            </div>
             <div class="about-details" data-animate="fade-in" data-delay="1000">
               <div class="detail-item">
                 <i class="fas fa-guitar"></i>
                 <div>
-                  <h3>A Musical Odyssey</h3>
-                  <p>George Matters embarked on his musical odyssey at a tender age, finding solace and passion in the enchanting notes of various instruments.</p>
-            
+                  <h3>Ein musikalisches Abenteuer</h3>
+                  <p>George Matters begann sein musikalisches Abenteuer bereits in jungen Jahren, als er Leidenschaft in den verzaubernden Klängen der Musik fand.</p>
                 </div>
-                
               </div>
               <div class="detail-item">
                 <i class="fas fa-infinity"></i>
                 <div>
-                  <h3>Versatility Personified</h3>
-                  <p>Versatility is the hallmark of George Matters artistry. Whether serenading weddings or setting the stage ablaze, his music transcends boundaries.</p>
+                  <h3>Versatilität in Person</h3>
+                  <p>Versatilität ist das Markenzeichen von George Matters' Kunst. Ob er Hochzeiten besingt oder die Bühne zum Beben bringt, seine Musik überschreitet Grenzen.</p>
                 </div>
               </div>
               <div class="detail-item">
                 <i class="fas fa-heart"></i>
                 <div>
-                  <h3>Passion for Every Note</h3>
-                  <p>Behind every note lies a story, and George Matters is a passionate storyteller. His music is an arrangement of sounds and expression of human emotion.</p>
+                  <h3>Leidenschaft für jede Note</h3>
+                  <p>Hinter jeder Note liegt eine Geschichte, und George Matters ist ein leidenschaftlicher Geschichtenerzähler. Seine Musik ist eine Anordnung ist der Klang menschlicher Emotionen.</p>
                 </div>
               </div>
           </div>
