--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="css/projects.css">
     <link rel="stylesheet" href="css/contact.css">
     <link rel="stylesheet" href="css/footer.css">
-
+    <link rel="stylesheet" href="css/cookies.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 
@@ -27,7 +27,9 @@
 <div id="services"></div>
 <div id="projects"></div>
 <div id="contact"></div>
+<div id="cookies"></div>
 <div id="footer"></div>
+
 
 <script src="js/scripts.js"></script>
 </body>
