extend for mobile view

--- a/html/header.html
+++ b/html/header.html
@@ -1,9 +1,9 @@
-<!-- Header -->
 <header class="site-header">
-    <a href="#home">
+    <a href="#home" class="site-logo-container">
         <img src="img/logo_resize.png" alt="George Matters Logo" class="site-logo"/>
     </a>
-    <nav class="main-navigation">
+    <button class="hamburger" id="hamburger">☰</button> 
+    <nav class="main-navigation" id="main-navigation">
         <ul>
             <li><a href="#home" class="nav-link">Home</a></li>
             <li><a href="#about" class="nav-link">About</a></li>
@@ -12,7 +12,4 @@
             <li><a href="#contact" class="nav-link">Contact</a></li>
         </ul>
     </nav>
-
 </header>
-
-
