close hamburger on selection

--- a/html/contact.html
+++ b/html/contact.html
@@ -18,6 +18,13 @@
                 </div>
                 <div class="form-row">
                     <div class="input-group">
+                        <label for="phone">Telefonnummer</label>
+                        <input type="tel" id="phone" name="phone" placeholder="Ihre Telefonnummer">
+                        <span class="error-message">Bitte geben Sie eine gültige Telefonnummer ein.</span>
+                    </div>
+                </div>
+                <div class="form-row">
+                    <div class="input-group">
                         <label for="message">Nachricht</label>
                         <textarea id="message" name="message" placeholder="Ihre Nachricht hier" required></textarea>
                         <span class="error-message">Bitte geben Sie eine Nachricht ein.</span>
