--- a/html/projects.html
+++ b/html/projects.html
@@ -17,7 +17,7 @@
       <div class="project">
         <img src="img/SteveD_GMatter.png" alt="GMatters/SteveD Project Cover" class="project-cover">
         <div class="project-info">
-          <h3 class="project-name">GeorgeMatters/SteveD</h3>
+          <h3 class="project-name">G.Matters & S.Delorenzo</h3>
           <p class="project-year">since 2014</p>
           <p class="project-description">Akkustische Gitarre, Stimmen und Kontrabass</p>
           <div class="music-links">
@@ -49,10 +49,10 @@
         </div>
       </div>
       <div class="project">
-        <img src="img/PROMO BAND PICS-2/26_websize.jpg" alt="George & Angi Project Cover" class="project-cover">
+        <img src="img/Mate-Logo.jpg" alt="George & Angi Project Cover" class="project-cover">
         <div class="project-info">
-          <h3 class="project-name">George & Angi</h3>
-          <p class="project-year">New</p>
+          <h3 class="project-name">MATE</h3>
+          <p class="project-year">George&Angi</p>
           <p class="project-description">Harmonisches Duo für verschiedenste Anlässe</p>
           <div class="music-links">
             <a href="link-to-spotify" class="music-link spotify">Spotify</a>
