small fixes aligned with matters

--- a/html/about.html
+++ b/html/about.html
@@ -7,27 +7,13 @@
               <img src="img/PROMO BAND PICS-2/236581304_239070291551945_7735105067690698295_n.jpg" alt="Profile" class="about-image about-image-profile">
             </div>
             <div class="about-details" data-animate="fade-in" data-delay="1000">
-              <div class="detail-item">
-                <i class="fas fa-guitar"></i>
-                <div>
-                  <h3>Ein musikalisches Abenteuer</h3>
-                  <p>George Matters begann sein musikalisches Abenteuer bereits in jungen Jahren, als er Leidenschaft in den verzaubernden Klängen der Musik fand.</p>
+              <div class="detail-item">      
+                <div class="about-me">
+                  <p>George Matters ist ein österreichischer Künstler dessen Wurzeln sich durch unzählige Genres schlagen. Mit seiner Musik verbindet er Singer/Songwriter, Folk, Blues und Alternative mit Pop-Elementen.  </p>
+                  <p>Live Auftritte u.a. in Österreich, Irland, Spanien, Italien, Kroatien und Deutschland  </p>
                 </div>
               </div>
-              <div class="detail-item">
-                <i class="fas fa-infinity"></i>
-                <div>
-                  <h3>Versatilität in Person</h3>
-                  <p>Versatilität ist das Markenzeichen von George Matters' Kunst. Ob er Hochzeiten besingt oder die Bühne zum Beben bringt, seine Musik überschreitet Grenzen.</p>
-                </div>
-              </div>
-              <div class="detail-item">
-                <i class="fas fa-heart"></i>
-                <div>
-                  <h3>Leidenschaft für jede Note</h3>
-                  <p>Hinter jeder Note liegt eine Geschichte, und George Matters ist ein leidenschaftlicher Geschichtenerzähler. Seine Musik ist eine Anordnung ist der Klang menschlicher Emotionen.</p>
-                </div>
-              </div>
+              
           </div>
         </div>
           <div class="about-image-container">
@@ -36,7 +22,7 @@
           </div>
 
           <div class="about-stats">
-            <img src="img/floatingnotes.png" alt="Decorative Image" class="stats-image">
+            <img src="img/musical-notes-transparent-background-5.png" alt="Decorative Image" class="stats-image">
             <span class="stats-number" data-animate="fade-in" data-delay="200">20+</span>
             <p class="stats-title" data-animate="fade-in" data-delay="400">Years Experienced</p>
         </div>
