--- a/html/home.html
+++ b/html/home.html
@@ -1,13 +1,13 @@
 <!-- Home Section with Image Slider -->
 <section id="home" class="home-section">
     <div class="image-slider-container">
-        <img class="home-slide active" src="img/titlepage_1.png" alt="Image 1">
-        <!--<img class="slide" src="img/title_2.png" alt="Image 2">-->
-        <img class="home-slide" src="img/titlepage.webp" alt="Image 3">
+        <img class="home-slide active" src="img/gtlive79.jpg" alt="Image 1">
+        <img class="home-slide" src="img/gtlive21.jpg" alt="Image 2">
+        <img class="home-slide" src="img/home_george.jpg" alt="Image 3">
     </div>
     <div class="overlay-text">
-        <h2 class="animated fadeInUp" style="animation-delay: 200ms;">Bereichern Sie Ihr Event mit George Matters - Musik für jeden Anlass</h2>
-        <p class="animated fadeInUp" style="animation-delay: 400ms;">Tauchen Sie Ihre besonderen Momente in perfekte Harmonie mit George Matters, Ihrer ersten Wahl, um Veranstaltungen durch die Kraft der Musik zu bereichern. Ob Hochzeit, Firmenveranstaltung oder jede Art von Feier, GeorgeMatters bringt eine einzigartige Mischung aus Talent und Vielseitigkeit, um eine unvergessliche Atmosphäre zu schaffen.</p>
+        <h2 class="animated fadeInUp" style="animation-delay: 200ms;">George Matters - Musik für jeden Anlass</h2>
+        <p class="animated fadeInUp" style="animation-delay: 400ms;">Tauchen Sie Ihre besonderen Momente in Musik! Ob Hochzeit, Taufe, Firmenveranstaltung oder jede Art von Feierlichkeit. Live Musik bereichert. </p>
         <div class="button-container">
             <a href="#about" class="button animated fadeInUp" style="animation-delay: 600ms;">About Me</a>
             <a href="#contact" class="button animated fadeInUp" style="animation-delay: 800ms;">Get in Touch</a>
