--- a/html/services.html
+++ b/html/services.html
@@ -1,7 +1,7 @@
 <section class="services-section">
   <div class="service-container">
       <h3 class="service-title">Dienstleistungen buchen</h3>
-      <p class="service-intro">Willkommen, George Matters verwandelt gewöhnliche Veranstaltungen durch die Kraft der Musik in außergewöhnliche Momente. Eine Reihe von Angeboten, sowie individual Lösungen gestalten ihre Anlässe als Symphonie unvergesslicher Erlebnisse zu erheben.</p>
+
       <a href="#contact" class="service-link">Jetzt buchen →</a>
   </div>
   <div class="service-boxes">
@@ -10,35 +10,35 @@
           <i class="fas fa-ring service-icon"></i>
           <h3 class="box-title">Hochzeiten</h3>
         </div>
-          <p class="box-content">Tauchen Sie Ihren Hochzeitstag in die verzaubernden Melodien von George Matters. Von der Zeremonie bis zum Empfang, lassen Sie die Musik Ihre Liebesgeschichte erzählen.</p>
+          <p class="box-content">Von der Zeremonie bis zum Empfang, lassen Sie die Musik Ihre Liebegeschichte erzählen.</p>
       </div>
       <div class="service-box">
         <div class="icon-container">
           <i class="fas fa-dove service-icon"></i> 
           <h3 class="box-title">Trauer Tage</h3>
         </div>
-          <p class="box-content">Bieten Sie Trost und Würde bei Abschiedszeremonien mit ergreifender musikalischer Begleitung, um das Andenken an Ihre Liebsten zu ehren.</p>
+          <p class="box-content">Bieten Sie Trost und Würde bei Abschiedszeremonien mit musikalischer Begleitung, um das Andenken an Ihre Liebsten zu ehren.</p>
       </div>
       <div class="service-box">
         <div class="icon-container">
           <i class="fas fa-moon service-icon"></i> 
           <h3 class="box-title">Veranstaltungen</h3>
         </div>
-          <p class="box-content">Ob es sich um ein Firmentreffen, eine private Party oder eine gesellschaftliche Veranstaltung handelt, setzen Sie die perfekte Stimmung. Kontaktieren Sie uns für nähere Infos</p>
+          <p class="box-content">Ob es sich um ein Firmentreffen, eine private Party oder eine gesellschaftliche Veranstaltung. Fragen Sie für Ihr Event an.</p>
       </div>
       <div class="service-box">
         <div class="icon-container">
           <i class="fas fa-microphone service-icon"></i> 
           <h3 class="box-title">Solokunst</h3>
         </div>
-          <p class="box-content">Erleben Sie die George Matters im Solo-Auftritt. Individuelle Kunst bringt eine einzigartige Note und schafft eine intime und persönliche Verbindung zum Publikum.</p>
+          <p class="box-content">Solo-Auftritte bei Konzerten und Festivals im In- und Ausland seit 2013.</p>
       </div>
       <div class="service-box">
         <div class="icon-container">
           <i class="fas fa-cogs service-icon"></i> 
           <h3 class="box-title">Individuelle Pakete</h3>
         </div>
-          <p class="box-content">Passen Sie das Musikerlebnis an Ihre spezifische Veranstaltung an. Kontaktieren Sie uns und sichern sich Ihre Unterhaltung.</p>
+          <p class="box-content">Passen Sie das Musikerlebnis an Ihre spezifische Veranstaltung an. Kontaktieren Sie mich und sichern Sie sich Ihre Unterhaltung.</p>
       </div>
   </div>
 </section>
