--- a/html/about.html
+++ b/html/about.html
@@ -24,7 +24,7 @@
           <div class="about-stats">
             <img src="images/musical-notes-transparent-background-5.png" alt="Decorative Image" class="stats-image">
             <span class="stats-number" data-animate="fade-in" data-delay="200">20+</span>
-            <p class="stats-title" data-animate="fade-in" data-delay="400">Years Experienced</p>
+            <p class="stats-title" data-animate="fade-in" data-delay="400">Years of Experience</p>
         </div>
     </div>
 </section>
