restyle color palette

--- a/html/socialmedia.html
+++ b/html/socialmedia.html
@@ -1,28 +1,28 @@
 <section class="social-media-section">
-    <div class="container">
+  <div class="container">
       <!--<h3>Follow on Social Media</h3>-->
       <div class="social-icons">
-        <!-- Instagram -->
-        <a href="https://www.instagram.com/mattersgeorge/" target="_blank" aria-label="Instagram">
-          <i class="fab fa-instagram"></i>
-        </a>
-        <!-- Facebook -->
-        <a href="https://www.facebook.com/georgemattersmusic" target="_blank" aria-label="Facebook">
-          <i class="fab fa-facebook-f"></i>
-        </a>
-        <!-- YouTube -->
-        <a href="https://www.youtube.com/@georgematters" target="_blank" aria-label="YouTube">
-          <i class="fab fa-youtube"></i>
-        </a>
-        <!-- Apple Music -->
-        <a href="https://music.apple.com/at/artist/george-matters/1386092521" target="_blank" aria-label="Apple Music">
-          <i class="fab fa-itunes-note"></i>
-        </a>
-        <!-- Spotify -->
-        <a href="https://open.spotify.com/intl-de/artist/2AnO6EgvLg4Hg5xFVqpobG" target="_blank" aria-label="Spotify">
-          <i class="fab fa-spotify"></i>
-        </a>
+          <!-- Instagram -->
+          <a href="https://www.instagram.com/mattersgeorge/" target="_blank" aria-label="Instagram">
+              <i class="fab fa-instagram"></i>
+          </a>
+          <!-- Facebook -->
+          <a href="https://www.facebook.com/georgemattersmusic" target="_blank" aria-label="Facebook">
+              <i class="fab fa-facebook-f"></i>
+          </a>
+          <!-- YouTube -->
+          <a href="https://www.youtube.com/@georgematters" target="_blank" aria-label="YouTube">
+              <i class="fab fa-youtube"></i>
+          </a>
+          <!-- Apple Music -->
+          <a href="https://music.apple.com/at/artist/george-matters/1386092521" target="_blank" aria-label="Apple Music">
+              <i class="fab fa-itunes-note"></i>
+          </a>
+          <!-- Spotify -->
+          <a href="https://open.spotify.com/intl-de/artist/2AnO6EgvLg4Hg5xFVqpobG" target="_blank" aria-label="Spotify">
+              <i class="fab fa-spotify"></i>
+          </a>
       </div>
-    </div>
-  </section>
-  
+      <hr class="separator-line">
+  </div>
+</section>
